@@ -1,3 +1,6 @@
+25 April 2013: Wouter
+	- Robust checks on dname validity from rdata for dname compare.
+
 19 April 2013: Wouter
 	- Fixup snprintf return value usage, fixed libunbound_get_option.
 
